# ArogyaYaan---MumbaiHacks

./: .gitignore  LICENSE
ML/: README.md  app.py  autodb.py  config.py  main.py  pyproject.toml  requirements.txt
ML/db/: db.py
ML/tools/: inventory.py  tools.py
app-frontend/: app.json  package-lock.json  package.json
app-frontend/app/(tabs)/: DriverScreen.js  FacilityScreen.js  HomeScreen.js  LoginScreen.js  index.tsx  superbase.js
app-frontend/app/data/: initialData.js  mockData.js
app-frontend/components/: MetricCard.js  QRScannerMock.js
backend/: go.mod  go.sum  main.go
backend/controllers/: admin_controller.go  alerts_controller.go  analytics_controller.go  approval_controller.go  auth_controller.go  csv_controller.go  dashboard_controller.go  inventory_controller.go  map_controller.go  reports_controller.go  solution_controller.go
backend/db/: database.go
backend/middleware/: auth.go  cors.go
backend/models/: all_models.go
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/phc/: layout.tsx
frontend/src/components/: Impactmap.tsx  MultiFactor.tsx  constants.ts
frontend/src/components/AdoptionRate/: AdoptionRate.tsx
frontend/src/components/AlertsBar/: AlertsBar.tsx
frontend/src/components/CardAction/: CardAction.tsx
frontend/src/components/CardProblem/: CardProblem.tsx
frontend/src/components/ChartCard/: ChartCard.tsx
frontend/src/context/: I18nContext.jsx
frontend/src/i18n/: en.json  mr.json
(+50 files in other folders)
